--- a/BingWall.Android/Resources/layout/Main.axml
+++ b/BingWall.Android/Resources/layout/Main.axml
@@ -1,14 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<Button  
-    android:id="@+id/myButton"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    android:layout_height="fill_parent">
+    <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/todaysImage" />
+    <Button
+        android:text="Sync"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/syncBtn" />
+    <Button
+        android:text="Set As Wallpaper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/wallBtn" />
 </LinearLayout>
-
