--- a/BingWall.iOS/MainStoryboard.storyboard
+++ b/BingWall.iOS/MainStoryboard.storyboard
@@ -1,108 +1,92 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UfT-c7-KKO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="64a-am-Xqb">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
-        <!--Wallpaper Backup-->
-        <scene sceneID="xnA-ey-fvt">
+        <!--Tab Bar Controller-->
+        <scene sceneID="PYF-1E-hQB">
             <objects>
-                <viewController id="sfJ-fQ-8Zr" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="CUD-nW-UON"/>
-                        <viewControllerLayoutGuide type="bottom" id="rjJ-sq-fCM"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="den-fd-kJC" customClass="BackupBingViewController">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Eom-5X-hv9">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2Hz-hW-svP">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Zh8-rh-4ji">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Wallpaper Backup" id="q0T-tg-c2b"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kVF-dK-SHf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="506" y="544"/>
-        </scene>
-        <!--Todays's Wallpaper-->
-        <scene sceneID="ekU-nI-6eW">
-            <objects>
-                <viewController id="3Hc-aK-43k" customClass="TodaysBingViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="dbu-4S-27W"/>
-                        <viewControllerLayoutGuide type="bottom" id="8g6-l3-G5C"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="tHR-d7-j3w">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xrp-pO-tOg"/>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZK4-r0-XLJ"/>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W9Z-ca-jdD">
-                                <rect key="frame" x="0.0" y="470" width="320" height="49"/>
-                                <color key="backgroundColor" red="0.031353771029999998" green="0.44162513240000001" blue="0.70599099860000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Download Image">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="didBingWallToday:" destination="3Hc-aK-43k" eventType="touchUpInside" id="q1X-fO-SwP"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Ii-EI-2dU">
-                                <rect key="frame" x="0.0" y="74" width="320" height="231"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Todays's Wallpaper" selectedImage="Default.png" id="X9p-Sx-bC9"/>
-                    <connections>
-                        <outlet property="bingWallImageDownloadBtn" destination="W9Z-ca-jdD" id="KYD-FV-4hG"/>
-                        <outlet property="bingWallImageView" destination="8Ii-EI-2dU" id="DcL-5Z-1TL"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OhI-JY-73u" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="506" y="-86"/>
-        </scene>
-        <!--Bing Wall View Controller-->
-        <scene sceneID="URk-4C-RME">
-            <objects>
-                <tabBarController id="UfT-c7-KKO" customClass="BingWallViewController" sceneMemberID="viewController">
+                <tabBarController id="64a-am-Xqb" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="QmB-L9-1IZ">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Sjo-PV-SNm">
                         <rect key="frame" x="0.0" y="431" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="3Hc-aK-43k" kind="relationship" relationship="viewControllers" id="eda-E2-gJ9"/>
-                        <segue destination="sfJ-fQ-8Zr" kind="relationship" relationship="viewControllers" id="BQN-cH-FQL"/>
+                        <segue destination="DUU-Sb-OGP" kind="relationship" relationship="viewControllers" id="ok4-WH-Oji"/>
+                        <segue destination="dVz-nG-YQV" kind="relationship" relationship="viewControllers" id="emG-De-9cl"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jbq-Xg-kve" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fQl-u6-W0d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34" y="229"/>
+            <point key="canvasLocation" x="-426" y="119"/>
+        </scene>
+        <!--Wallpaper Backup-->
+        <scene sceneID="zbl-ll-efU">
+            <objects>
+                <viewController id="dVz-nG-YQV" customClass="WallpaperBackupViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dLI-uU-N3s"/>
+                        <viewControllerLayoutGuide type="bottom" id="jME-zt-1lH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aeY-bf-Wn9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Wallpaper Backup" id="DpP-d4-9bc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xj8-C3-Ame" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="88" y="562"/>
+        </scene>
+        <!--Today's Wallpaper-->
+        <scene sceneID="8QE-bz-gh9">
+            <objects>
+                <viewController id="DUU-Sb-OGP" customClass="TodaysBingViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mfx-8B-UqD"/>
+                        <viewControllerLayoutGuide type="bottom" id="DYN-9L-0lk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NAl-ft-1R7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1oX-Oq-G3R"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTc-ya-goh">
+                                <rect key="frame" x="0.0" y="484" width="161" height="35"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Sync">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Default.png" highlightedImage="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="LeZ-Xs-qOQ">
+                                <rect key="frame" x="0.0" y="64" width="329" height="233"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYd-gs-OnN">
+                                <rect key="frame" x="162" y="484" width="161" height="35"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Set As Wallpaper">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Today's Wallpaper" id="JN7-Ku-UfN"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="syncBtn" destination="lTc-ya-goh" id="jrZ-Xp-4Uf"/>
+                        <outlet property="todaysBingWallpaper" destination="LeZ-Xs-qOQ" id="LVq-To-kDH"/>
+                        <outlet property="wallpaperBtn" destination="ZYd-gs-OnN" id="GGd-tA-krq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7eb-gE-3nB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="88" y="-184"/>
         </scene>
     </scenes>
     <resources>
